//TODO: Erstmal copy as PlantUML Server Link, danach BIld kopieren
@startuml
'https://plantuml.com/class-diagram

abstract class HolsDerGeierSpieler


class AlexBotV3{
    - myAvailableCards: ArrayList<Integer>
    - enemyAvailableCards: ArrayList<Integer>
    - pointsLeftInGame: ArrayList<Integer>
    - playedGames: double
    - wonGames: double
    - winPercentage: double
    - strategyThreshold: double
    - currentStrategy: int
    + reset()
    + gibKarte()
    - strategyHandler()
}
class AlexBotV3
note right: import Strategies.*

package "Strategies" #DDDDDD{
    abstract class Astrategy{
         # cm: CardManager
         # {abstract} playCard(): int
    }
    class CardManager{
        + updateLists()
        # cardIsAvailable(): boolean
        # enemyCardExists(): boolean
        # removeCard(): int
        # playMinCard(): int
        # playMaxCard(): int
    }

    class AggressiveStrat{
        + playCard():int
     }
    class DefensiveStrat{
        + playCard():int
    }
    class DynamicMappedStrat{
        + playCard():int
        - playSpecialCase1(): int
        - playSpecialCase2(): int
    }
    class RandomStrat{
        + playCard():int
    }
    class StaticMappedStrat{
        - cardMapping: HashMap<Integer, Integer>
        + playCard(): int
    }
}

HolsDerGeierSpieler <|- AlexBotV3
CardManager<-Astrategy
CardManager <----- AlexBotV3
Astrategy <|-- AggressiveStrat
Astrategy <|-- DefensiveStrat
Astrategy <|-- DynamicMappedStrat
Astrategy <|-- StaticMappedStrat
Astrategy <|-- RandomStrat
AggressiveStrat <--- AlexBotV3
DefensiveStrat <--- AlexBotV3
DynamicMappedStrat <--- AlexBotV3
StaticMappedStrat <--- AlexBotV3
RandomStrat <--- AlexBotV3

@enduml